syntax = "proto3";

package amenity;

option go_package = "github.com/nekizz/final-project/backend/go-pbtype/amenity";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";


// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Amenity {
  int32 id = 1;
  string name = 2;
  int32 room_id = 3;

  string created_at = 20;
  string updated_at = 21;
}

message OneAmenityRequest {
  string id = 1;
}

message ListAmenityRequest {
  uint32 page = 3;
  uint32 limit = 4;
  string created_at_min = 5;
  string created_at_max = 6;
  string search_field = 7;
  string search_value = 8;
}

message ListAmenityResponse {
  repeated Amenity items = 1;
  uint32 max_page = 2;
  uint32 total_count = 3;
  uint32 page = 4;
  uint32 limit = 5;
  string search_field = 6;
  string search_value = 7;
}

service AmenityService {
  rpc Create(Amenity) returns (Amenity) {
    option (google.api.http) = {
      post: "/amenity"
      body: "*"
    };
  };

  rpc Update(Amenity) returns (Amenity) {
    option (google.api.http) = {
      put: "/amenity/{id}"
      body: "*"
    };
  };
  rpc Get(OneAmenityRequest) returns (Amenity) {
    option (google.api.http) = {
      get: "/amenity/{id}"
    };
  };
  rpc List(OneAmenityRequest) returns (ListAmenityResponse) {
    option (google.api.http) = {
      get: "/amenitys"
    };
  };
  rpc Delete(OneAmenityRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/amenity/{id}"
    };
  };
}